--- a/docs/04_implement_audio_transcription/0401.md
+++ b/docs/04_implement_audio_transcription/0401.md
@@ -1,26 +1,37 @@
 ---
-title: '1. Create a speech service'
+title: '1. Incorporate speech-to-text transcription'
 layout: default
 nav_order: 1
 parent: 'Exercise 04: Implement audio transcription'
 ---
 
-# Task 01 - Create a speech service (20 minutes)
+# Task 01 - Incorporate speech-to-text transcription and call compliance (30 minutes)
+
+TODO
+(include call compliance)
 
 ## Introduction
 
-Azure OpenAI has the capacity to parse natural language in textual format. We can also incorporate Azure AI Services and its Speech service to perform speech-to-text transcription, enabling us to use the output of the Speech service as an input for OpenAI prompts. Throughout the course of this exercise, you will create an Azure AI Services Speech service and test it out in the OpenAI Studio Chat playground. Then, you will incorporate the service in your existing Streamlit dashboard.
+Azure OpenAI is an important part of the Azure AI Services landscape, but there are several other services that we can use to support Contoso Suites, including the Azure AI Services Speech service. Understanding and transcribing speech is a critical part of a modern call center analytics system. We can use the Speech service to enable automated transcription, and then submit those results to Azure OpenAI and our GPT-4o deployment to determine whether a call is in compliance.
+
+You will build a transcription engine and a compliance checker with three simple rules:
+
+1. Does the call contain vulgarity?
+2. If the call needs an indicator that Contoso Suites is recording it, did that indicator happen? An example of this is when you hear the message "This call may be monitored or recorded for quality assurance and training purposes" on telephone calls.
+3. If users wish to check whether a call is actually relevant to Contoso Suites, was the call relevant? Contoso Suites deals with the hotel and travel industry.
 
 ## Description
 
-In this task, you will create an Azure AI Services Speech service and use it in the OpenAI Studio Chat playground. You will use it in conjunction with the resort and hotel information that you uploaded as part of Exercise 02.
+In this task, you will extend the existing Streamlit dashboard to include speech-to-text transcription and call compliance activities.
 
 The key tasks are as follows:
 
-1. Create an Azure AI Services Speech service. Make sure it is in the same resource group and region as your OpenAI service.
-2. In the [Azure OpenAI Studio](https://oai.azure.com), navigate to the Chat playground and ensure that your hotel and resort data is still available to the service.
-3. Use the microphone icon below the user query input box to enable speech to text using your newly created Speech service.
-4. Using your microphone, speak the following request: "I've visited Aruba and Bonaire before and would like to visit somewhere else. What other resort locations would be good options if I want to scuba dive?" Ensure that this is transcribed into the user query input box and submit the query.
+1. In the Streamlit dashboard, open the page `2_Call_Center.py`. Navigate to the `main()` function and into the "Is Your Call in Compliance?" section. Implement the TODO items to fill out the function call.
+2. Implement the TODO items in the `is_call_in_compliance()` function to complete this function.
+3. Implement the TODO items in the `make_azure_openai_chat_request()` function to complete this function.
+4. Either upload the file `01_Customer_Call.wav` or perform a live call. After transcription completes and the results are in Streamlit's session state, check the boxes for **Call needs an indicator we are recording it** and **Call is relevant to the hotel and resort industry**. Based on the transcription, ensure that the results make sense.
+5. Upload the file `02_Customer_Call_Bad.wav`. Read the transcript to determine if there was an indicator of recording and if the call is relevant. Check the boxes for **Call needs an indicator we are recording it** and **Call is relevant to the hotel and resort industry** and run the compliance check.
+6. Upload the file `02b_Customer_Call_Bad_Wrong_Sample_Rate.wav`. This is the same as the prior recording except at a sample rate of 44100 Hz whereas we expect 16000 Hz. Read the transcript to see what happens when we process a file using the wrong sample rate. Check the boxes for **Call needs an indicator we are recording it** and **Call is relevant to the hotel and resort industry** and run the compliance check.
 
 ## Success Criteria
 
