--- a/docs/04_implement_audio_transcription/0403.md
+++ b/docs/04_implement_audio_transcription/0403.md
@@ -1,14 +1,13 @@
 ---
-title: '2. Summarize and vectorize'
+title: '3. Implement vector search'
 layout: default
-nav_order: 2
+nav_order: 3
 parent: 'Exercise 04: Implement audio transcription'
 ---
 
-# Task 02 - Summarize and vectorize call transcriptions and summaries (30 minutes)
+# Task 03 - Implement vector search of audio transcriptions and summaries (30 minutes)
 
 TODO
-(include saving to Cosmos DB)
 
 ## Introduction
 
