--- a/docs/01_deploy_app_resources/0102.md
+++ b/docs/01_deploy_app_resources/0102.md
@@ -22,7 +22,7 @@ The key tasks are as follows:
 3. Import the data from **FAQ.txt** into a container named `contoso-suites`.
 4. Create a `contoso-suites-faq` index in Azure AI Search, built on the three files in the `contoso-suites` container in your storage account. You should embed with `text-embedding-002-ada` and support Hybrid (Vector + Keyword) search.
 5. Update the front-end code in `src/ContosoSuitesDashboard/` to enable chat operations against the FAQ index.
-   1. Create a file called `secrets.toml` in `src/ContosoSuitesDashboard/.streamlit/`. Pattern it after `secrets.template.toml` but include your Azure OpenAI and Azure AI Search details.
+   1. Create a file called `secrets.toml` in `src/ContosoSuitesDashboard/.streamlit/`. Pattern it after `secrets.template.toml` but include your Azure OpenAI, Azure AI Search, Azure AI Services Speech service, and Azure AI Services Language service details.
    2. The Contoso Suites team has followed instructions online on how to interact with an Azure OpenAI model deployment. They would like you to extend the code in `src/ContosoSuitesDashboard/pages/1_Chat_with_Data.py` to ensure any queries make use of the Azure AI Search index you have created rather than relying on the inbuilt knowledge of the default GPT-4 model.
    3. You can test your work by running the following queries. The first two queries should respond with relevant information. The final two queries should not give you a valid response because they ask for information outside the scope of our data.
       1. Which hotels on the island of Curacao have EV stations?
@@ -108,16 +108,13 @@ The key tasks are as follows:
   - In the **Settings** menu, select the **Keys** entry. Copy the value of **Primary admin key** and save it as `key` in the `[search]` section of your secrets file.
   - Return to the resource group and then select your Azure AI Search service.
   - Copy the value of **Url** from the **Essentials** panel and save it as `endpoint` in the `[search]` section of your secrets file.
-  - Return to the resource group and select your Azure AI Services Speech service.
+  - Return to the resource group and select your Speech service.
   - In the **Resource Management** menu, select the **Keys and Endpoint** entry. Copy the value of **KEY 1** and save it as `key` in the `[speech]` section of your secrets file. Copy the value of **Location/Region** and save it as `region`.
+  - Return to the resource group and select your Language service.
+  - In the **Resource Management** menu, select the **Keys and Endpoint** entry. Copy the value of **KEY 1** and save it as `key` in the `[language]` section of your secrets file. Copy the value of **Endpoint** and save it as `endpoint`.
+  
 - Open the file `src/ContosoSuitesDashboard/pages/1_Chat_with_Data.py`. The code will run as-is, but will not have knowledge of your search index. To support chat with data, make the following changes to the Python script.
-  - Change the `handle_chat_prompt()` function to accept the following signature:
-
-    ```python
-    def handle_chat_prompt(prompt, aoai_deployment_name, aoai_endpoint, aoai_key, search_endpoint, search_key, search_index_name):
-    ```
-
-  - Add the search secrets to the `main()` function, below the Azure OpenAI secrets and above the for loop to display message history.
+  - Add the search secrets to the `create_chat_completion()` function, below the Azure OpenAI secrets and above the call to create a client.
 
     ```python
     search_endpoint = st.secrets["search"]["endpoint"]
@@ -125,19 +122,8 @@ The key tasks are as follows:
     search_index_name = st.secrets["search"]["index_name"]
     ```
 
-  - Change the call to `handle_chat_prompt()` in the `main()` function to include the new search parameters.
-
-    ```python
-    handle_chat_prompt(prompt, aoai_deployment_name, aoai_endpoint, aoai_key, search_endpoint, search_key, search_index_name)
-    ```
-
-  - Change the `create_chat_completion()` function to accept the following signature:
-
-    ```python
-    def create_chat_completion(aoai_deployment_name, messages, aoai_endpoint, aoai_key, search_endpoint, search_key, search_index_name):
-    ```
-
-  - Replace the `return` statement's chat completion request with one that includes an Azure AI Search data source.
+  - You may also wish to add a note to the `create_chat_completion()` docstrings to note this new assumption.
+  - Change the `create_chat_completion()` function's `return` statement's chat completion request to one that includes an Azure AI Search data source.
 
     ```python
     return client.chat.completions.create(
@@ -163,12 +149,6 @@ The key tasks are as follows:
             ]
         }
     )
-    ```
-
-  - Inside the `handle_chat_prompt()` function, replace the `for` loop with the following code:
-
-    ```python
-    for response in create_chat_completion(aoai_deployment_name, st.session_state.messages, aoai_endpoint, aoai_key, search_endpoint, search_key, search_index_name):
     ```
 
 - In order to test your code, navigate to the `src/ContosoSuitesDashboard/` folder in your terminal. Then, run the following command to begin the Streamlit dashboard.
