Adding function app for document vectorization

--- a/docs/02_implement_vector_search_in_cosmos_db_nosql/0202.md
+++ b/docs/02_implement_vector_search_in_cosmos_db_nosql/0202.md
@@ -1,30 +1,72 @@
 ---
-title: '2. Add data to the Chat playground'
+title: '2. Create and store vector embeddings'
 layout: default
 nav_order: 2
-parent: 'Exercise 02: Add chat with your data'
+parent: 'Exercise 02: Implement contextual grounding using vector search in Azure Cosmos DB for NoSQL'
 ---
 
-# Task 02 - Add data to the Chat playground (20 minutes)
+# Task 02 - Create and store vector embeddings (30 minutes)
 
 ## Introduction
 
-Azure OpenAI supports adding data from a variety of Azure data sources, including Azure AI Search, Azure Blob Storage, Azure Cosmos DB for MongoDB vCore, data from a specific URL, or uploading local files. We can process data from these resources and make them available to an Azure OpenAI deployment, allowing an assistant to answer natural language user queries.
+Vectors, also known as embeddings or vector embeddings, are mathematical representations of data in a high-dimensional space. In this space, each dimension corresponds to a feature of the data, and tens of thousands of dimensions might be used to represent sophisticated data. A vector's position in this space represents its characteristics. Words, phrases, or entire documents, and images, audio, and other types of data can all be vectorized. An embedding is a special format of data representation that can be easily utilized by machine learning models and algorithms. The embedding is an information dense representation of the semantic meaning of a piece of text. Each embedding is a vector of floating point numbers, such that the distance between two embeddings in the vector space is correlated with semantic similarity between two inputs in the original format. Azure OpenAI provides several models for creating vector embeddings, and for this exercise, you will use the `text-embedding-ada-002` model.
+
+To store the generated embeddings, you will use a vector database. Vector datasbases are designed to store and manage vector embeddings. The vector database you will use is Azure Cosmos DB for NoSQL. It allows you to store vectors alongside traditional schema-free data within your documents, streamlining data management and significantly enhancing the efficiency of vector operations. Keeping all relevant data in a single logical unit simplifies your data architecture, making it easy to understand and manage.
 
 ## Description
 
-Upload data and create vectors using Azure Open AI (30 min)
-   1. Upload data from blob storage (User reviews and property maintenance JSON files)
-   2. Vectorize text fields
-   3. Write vectors to field defined in container
-   4. Review data in data explorer to see what vectors look like.
-   5. Update application to handle vectorizing new records?
+Create and store vectors embeddings (30 min)
 
-In the prior task, you made resort and hotel data available in Azure Blob Storage. In this task, you will show the Contoso Suites staff how to ask questions of a ChatGPT deployment based on the data you imported.
+   1. Update Azure function with appropriate connection string details.
+   2. Run function locally, set a break point, and add a new maintenance task via the Cosmos DB Data Explorer to see how it works.
+   3. Review updated record in Cosmos DB to via generated vectors.
+   4. Deploy the function to Azure
+      1. Configure app settings (connection string)
+   5. Populate the `MaintenanceRequests` container with data from the `PropertyMaintenance.json` file in the [/src/data folder](https://github.com/microsoft/TechExcel-Integrating-Azure-PaaS-and-AI-Services-for-AI-Design-Wins/tree/main/src/data) of the repository.
+   6. Review data in data explorer to confirm the function is processing newly added data.
+
+In the prior task, you configured Azure Cosmos DB for NoSQL as an integrated vector database. In this task, you will use an Azure Function and the Azure Cosmos DB change feed to generate vector embeddings for property maintenance tasks and save those into the `MaintenaceTasks` container in Cosmos DB.
+
+You will conclude by uploading data supplied by the Contoso Suites staff into the containers you created in Cosmos DB. These JSON data files contain user reviews and maintenance tasks for several hotels on their resorts. They offer an example of the types of data the company believes can benefit from the similarity search capabilities provided by Vector Search in Cosmos DB, so they would like you to incorporate this data into the proof of concept.
 
 The key tasks are as follows:
 
-1. Add a new data source for resort and hotel information in the Azure AI Studio Chat playground. Make sure that you have enabled vectorization using a text-embedding-ada-002 deployment.
+1. Build an Azure Function with an Azure Cosmos DB change feed trigger to vectorize documents added to the `MaintenanceRequests` container.
+2. Test the function by running it locally:
+   1. You will need to create a `local.settings.json` file containing the required settings:
+      - `CosmosDBConnectionString`
+      - `AzureOpenAIEndpoint`
+      - `AzureOpenAIKey`
+      - `DeploymentName`: This must be the deployment name of the `text-embedding-ada-002` model in your Azure OpenAI instance.
+   2. Insert the following record into the `MaintenanceRequests` container and observe the results of the function execution.
+
+        ```json
+        {
+          "hotel_id": 1, 
+          "hotel": "Oceanview Inn",
+          "source": "customer",
+          "date": "2024-08-10",
+          "details": "The air conditioning (A/C) unit in room 105 is malfunctioning and making a loud noise. Customer will be out of the room between noon and 2 PM. This needs immediate maintenance attention.",
+          "room_number": 227
+        }
+        ```
+
+3. Examine the function input via breakpoints added before running.
+4. Examine the data in Cosmos DB and look at the vector embeddings inserted into the document.
+5. Deploy the function to Azure.
+6. Navigate to the live screen and watch the logs.
+7. Upload the `PropertyMaintenance.json` file to insert bulk data into the `MaintenanceRequests` container.
+8. Observe the files being processed.
+9.  Execute a `VectorDistance()` query via Data Explorer.
+   1.  Create new query.
+   2.  Add query below...
+   3.  Observe results and `SimilarityScore` values.
+
+
+3. Vectorize data using a `text-embedding-ada-002` deployment in Azure OpenAI.
+4. Write the generated vectors into the `vector-embeddings` fields in the MaintenanceRequests` container.
+
+
 2. Following is a sample customer request that a Contoso Suites customer service agent has received in the past. "I am looking for a sunny beachside resort on an island. There need to be diving opportunities nearby and I'd prefer it not to be too crowded an area. Which resorts would you recommend?" Enter this request into the chat session and note the response.
 
     {: .note }
@@ -39,6 +81,15 @@ The key tasks are as follows:
 
 ## Learning Resources
 
+- [What are vector embeddings?](https://learn.microsoft.com/azure/cosmos-db/gen-ai/vector-embeddings)
+- [Understand embeddings in Azure OpenAI service](https://learn.microsoft.com/azure/ai-services/openai/concepts/understand-embeddings)
+- [Azure OpenAI embeddings models](https://learn.microsoft.com/azure/ai-services/openai/concepts/models#embeddings-models)
+- [VectorDistance (NoSQL query)](https://learn.microsoft.com/azure/cosmos-db/nosql/query/vectordistance)
+
+- [OpenAI Inference](https://learn.microsoft.com/dotnet/api/overview/azure/ai.openai-readme?view=azure-dotnet-preview)
+- [AzureOpenAIClient class](https://learn.microsoft.com/dotnet/api/azure.ai.openai.azureopenaiclient?view=azure-dotnet-preview)
+
+
 - [Azure OpenAI on your data](https://learn.microsoft.com/azure/ai-services/openai/concepts/use-your-data)
 - [Data, privacy, and security for Azure OpenAI Service](https://learn.microsoft.com/legal/cognitive-services/openai/data-privacy)
 
@@ -47,7 +98,40 @@ The key tasks are as follows:
 <details markdown="block">
 <summary>Expand this section to view the solution</summary>
 
-- All of this work can be done in the current Azure AI Studio (https://oai.azure.com).
+
+- The steps to run the function...
+  
+  - In VS Code, open a new terminal and install the `Azure.AI.OpenAI` library.
+  
+      ```azurecli
+      dotnet add package Azure.AI.OpenAI --prerelease
+      dotnet add package OpenAI --prerelease
+      dotnet add package Microsoft.Azure.Functions.Worker.Extensions.CosmosDB
+      ```
+
+    - To run the function app locally, you must create a `local.settings.json` file in the `ContosoSuitesVectorizationFunction` directory and add the following content, replacing the bracketed tokens with values for your environment.
+
+        ```json
+        {
+          "IsEncrypted": false,
+          "Values": {
+            "AzureWebJobsStorage": "",
+            "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated",
+            "CosmosDBConnectionString": "[YOUR_COSMOS_DB_CONNECTION_STRING]",
+            "AzureOpenAIEndpont": "[YOUR_AZURE_OPENAI_ENDPOINT]",
+            "AzureOpenAIKey": "[YOUR_AZURE_OPENAI_KEY]",
+            "DeploymentName": "text-embedding-ada-002"
+          }
+        }
+        ```
+  
+
+- The steps to generate vector embeddings using Azure OpenAI are:
+  - Navigate the your Azure OpenAI resource in the [Azure portal](https://portal.azure.com/).
+  - Expand the **Resource Management** menu item in the left-hand menu and select **Keys and Endpoint**.
+  - Copy the **Endpoint** and **KEY 1** values.
+  - 
+  - 
 - The steps to add a data source in the Chat playground are:
   - Navigate to the Chat tab in Azure AI Studio.
   - Select the "Add your data" tab from the Assistant setup page.
@@ -60,7 +144,7 @@ The key tasks are as follows:
   - Select the storage account you created and the `contoso-suites` storage container.
   - Choose the Azure AI Search resource you created.
   - The index name can be something simple, such as "resorts" and the Indexer schedule can be set to Once.
-  - Select the "Add vector search to this search resource" option and choose your text-embedding-ada-002 deployment from the drop-down list.
+  - Select the "Add vector search to this search resource" option and choose your `text-embedding-ada-002` deployment from the drop-down list.
 
     ![Select the data source](../../media/Solution/0202_SelectDataSource.png)
 
@@ -73,5 +157,21 @@ The key tasks are as follows:
     ![Enable hybrid search via vector and keyword](../../media/Solution/0202_HybridSearch.png)
 
 - After ingestion and processing is complete, you can ask questions of the uploaded dataset.
+
+- The Azure Cosmos DB Data Explorer can be used to upload the data files provided by Contoso Suites.
+  - In the [Azure portal](https://portal.azure.com), navigate to your Cosmos DB resource and select **Data Explorer** in the left-hand menu.
+  - In the Data Explorer, expand the **ContosoSuites** database and the **UserReviews** container, then select **Items**.
+
+    ![Data Explorer is highlighted in the left-hand menu. The expand icon is highlighted for the database and UserReviews containers. Items is highlighted.](../../media/Solution/0201-azure-cosmos-db-data-explorer-user-reviews-items.png)
+
+  - Select **Upload Item** on the toolbar.
+
+    ![The Upload Item button on the Azure Cosmos DB toolbar is highlighted.](../../media/Solution/0201-azure-cosmos-db-toolbar-upload-item.png)
+
+  - In the **Upload Items** dialog, select the browse button and navigate to the `UserReviews.json` file in the `/src/data` directory in the location where cloned the repository, then select **Upload** to import the data in the file.
+
+    ![The Upload Items dialog is displayed with the browse and Upload buttons highlighted. UserReviews.json appears in the Select JSON files box.](../../media/Solution/0201-upload-items-user-reviews.png)
+
+  - Repeat the above steps, this time uploading data into the `MaintenanceRequests` container from the `PropertyMaintenance.json` file.
 
 </details>
