Update exercise 4 task 1

--- a/docs/04_implement_audio_transcription/0401.md
+++ b/docs/04_implement_audio_transcription/0401.md
@@ -5,10 +5,7 @@ nav_order: 1
 parent: 'Exercise 04: Implement audio transcription'
 ---
 
-# Task 01 - Incorporate speech-to-text transcription and call compliance (30 minutes)
-
-TODO
-(include call compliance)
+# Task 01 - Incorporate speech-to-text transcription and call compliance (20 minutes)
 
 ## Introduction
 
@@ -26,51 +23,87 @@ In this task, you will extend the existing Streamlit dashboard to include speech
 
 The key tasks are as follows:
 
-1. In the Streamlit dashboard, open the page `2_Call_Center.py`. Navigate to the `main()` function and into the "Is Your Call in Compliance?" section. Implement the TODO items to fill out the function call.
-2. Implement the TODO items in the `is_call_in_compliance()` function to complete this function.
-3. Implement the TODO items in the `make_azure_openai_chat_request()` function to complete this function.
-4. Either upload the file `01_Customer_Call.wav` or perform a live call. After transcription completes and the results are in Streamlit's session state, check the boxes for **Call needs an indicator we are recording it** and **Call is relevant to the hotel and resort industry**. Based on the transcription, ensure that the results make sense.
-5. Upload the file `02_Customer_Call_Bad.wav`. Read the transcript to determine if there was an indicator of recording and if the call is relevant. Check the boxes for **Call needs an indicator we are recording it** and **Call is relevant to the hotel and resort industry** and run the compliance check.
-6. Upload the file `02b_Customer_Call_Bad_Wrong_Sample_Rate.wav`. This is the same as the prior recording except at a sample rate of 44100 Hz whereas we expect 16000 Hz. Read the transcript to see what happens when we process a file using the wrong sample rate. Check the boxes for **Call needs an indicator we are recording it** and **Call is relevant to the hotel and resort industry** and run the compliance check.
+1. In the Streamlit dashboard, open the page `4_Call_Center.py`. Begin by running the dashboard and reviewing how the Call Center page operates. The Contoso Suites team has implemented a simple file upload feature and provided you with a sample audio file for testing. That sample file is in `src/data/audio` and is entitled `01_Customer_Service_Call.wav`. Use that file to generate a test transcript and ensure you understand how the code on the page works.
+2. The Contoso Suites development team tried to implement transcription functionality but were unable to get the code to work. They would like you to complete the `create_transcription_request()` function. There are three `TODO` items in the function.
+3. Fill in the `is_call_in_compliance()` function. They would like to perform one check every time: determine whether there was vulgarity on the call. There are two optional checks that need to happen if the user selects the appropriate checkbox. If the user checks `include_recording_message`, we want check if the caller was aware that the call is being recorded. If `is_relevant_to_topic` is active, we want to ask if the call is relevant to the hotel and resort industry. After setting up a system prompt which handles these mandatory and conditional checks, call the `make_open_ai_chat_request()` function and return its message contents.
+4. After filling in these code segments, re-run the application and ensure that you can generate a transcript of the sample call audio and can generate a compliance check. You should get a response that the call contains no vulgarity, that the user is aware of the call being recorded, and that the call does pertain to the hotel and resort industry.
+5. Deploy the application and ensure that your it still behaves correctly as an App Service.
 
 ## Success Criteria
 
-- You have created an Azure AI Services Speech service.
-- You are able to submit a spoken query using the Chat playground.
+- You are able to generate a transcript of an audio file.
+- You are able to perform a compliance check of an audio transcription.
+- You are able to deploy the application to Azure App Services and have the application continue to function as expected.
 
 ## Learning Resources
 
 - [Speech service overview](https://learn.microsoft.com/azure/ai-services/speech-service/overview)
 - [Quickstart: Hear and speak with chat models in the Azure AI Studio playground](https://learn.microsoft.com/azure/ai-studio/quickstarts/hear-speak-playground)
+- [Quickstart: Recognize and convert speech to text](https://learn.microsoft.com/azure/ai-services/speech-service/get-started-speech-to-text?tabs=windows%2Cterminal&pivots=programming-language-python)
 
 ## Solution
 
 <details markdown="block">
 <summary>Expand this section to view the solution</summary>
 
-- The steps to create an Azure AI Services Speech service in the Azure Portal are as follows:
-  - Navigate to [the Azure Portal](https://portal.azure.com)
-  - In the search menu, enter "Azure AI services" and select the **Azure AI services** item from the **Services** menu.
-  - Choose the **Speech service** entry from the **Azure AI services** menu.
-  - Select **+ Create** to create a new speech service.
-  - In the Create Speech Services menu, ensure that you select the same resource group and region that you chose for your OpenAI service. Choose the **Standard S0** pricing tier for this service.
-  - Select the **Review + create** button to review your choices and then choose **Create** to build the service.
+- The code to complete the `create_transcription_request()` function is as follows:
 
-    ![Settings to create a Speech service](../../media/Solution/0401_SpeechService.png)
+    ```python
+    # Subscribe to the events fired by the conversation transcriber
+    transcriber.transcribed.connect(handle_final_result)
+    transcriber.session_started.connect(lambda evt: print(f'SESSION STARTED: {evt}'))
+    transcriber.session_stopped.connect(lambda evt: print(f'SESSION STOPPED {evt}'))
+    transcriber.canceled.connect(lambda evt: print(f'CANCELED {evt}'))
+    # stop continuous transcription on either session stopped or canceled events
+    transcriber.session_stopped.connect(stop_cb)
+    transcriber.canceled.connect(stop_cb)
 
-- Navigate to the [OpenAI Studio](https://oai.azure.com) and make sure you are in the chat playground by selecting **Chat** from the **Playground** menu.
-- Navigate to **Add your data (preview)** and ensure that you still have the hotel and resorts index selected as your data source. If not, review the instructions in [Exercise 02, Task 02](../02_add_chat_with_data/0202.md) to repopulate this data source.
-- In the chat playground, select the microphone icon below the user query input box.
+    transcriber.start_transcribing_async()
 
-    ![Select the microphone option from the chat query menu](../../media/Solution/0401_Microphone.png)
+    # Read the whole wave files at once and stream it to sdk
+    _, wav_data = wavfile.read(audio_file)
+    stream.write(wav_data.tobytes())
+    stream.close()
+    while not done:
+        time.sleep(.5)
 
-- In the Playground Settings modal dialog, choose your speech resource from the drop-down list. Then, check the box acknowledging that spoken chat will incur usage to your subscription and enable speech to text. Select **Save** to complete the process.
+    transcriber.stop_transcribing_async()
+    ```
 
-    ![Choose the speech resource, acknowledge usage rules, and enable speech to text in the Playground Settings](../../media/Solution/0401_PlaygroundSettings.png)
+    This code satisfies all of the `TODO` blocks and should go immediately after the `stop_cb()` function and before `return all_results`.
+- The complete `is_call_in_compliance()` is as follows:
 
-- Select the microphone icon below the user query box. Using your microphone, speak the following request: "I've visited Aruba and Bonaire before and would like to visit somewhere else. What other resort locations would be good options if I want to scuba dive?"
-
-    {: .note }
-    > Your browser may prompt you for access to use your microphone.
+    ```python
+    @st.cache_data
+    def is_call_in_compliance(call_contents, include_recording_message, is_relevant_to_topic):
+        """Analyze a call for relevance and compliance."""
+    
+        joined_call_contents = ' '.join(call_contents)
+        if include_recording_message:
+            include_recording_message_text = "2. Was the caller aware that the call was being recorded?"
+        else:
+            include_recording_message_text = ""
+    
+        if is_relevant_to_topic:
+            is_relevant_to_topic_text = "3. Was the call relevant to the hotel and resort industry?"
+        else:
+            is_relevant_to_topic_text = ""
+    
+        system = f"""
+            You are an automated analysis system for Contoso Suites.
+            Contoso Suites is a luxury hotel and resort chain with locations
+            in a variety of Caribbean nations and territories.
+            
+            You are analyzing a call for relevance and compliance.
+    
+            You will only answer the following questions based on the call contents:
+            1. Was there vulgarity on the call?
+            {include_recording_message_text}
+            {is_relevant_to_topic_text}
+        """
+    
+        response = make_azure_openai_chat_request(system, joined_call_contents)
+        return response.choices[0].message.content
+    ```
 
 </details>
