--- a/docs/02_implement_vector_search_in_cosmos_db_nosql/0201.md
+++ b/docs/02_implement_vector_search_in_cosmos_db_nosql/0201.md
@@ -21,7 +21,7 @@ The key tasks are as follows:
 
 1. Enable the Vector Search feature in Azure Cosmos DB for NoSQL.
 2. Create a container named "MaintenanceRequests" in the `ContosoSuites` database, using the `hotel_id` field as the partition key.
-3. During container creation, define a container vector policy using the `cosine` distance function and assign an appropriate vector index type. Name the vector field `request_vector`.
+3. During container creation, define a container vector policy using the `cosine` distance function and assign an appropriate vector index type. Designate the field for storing vector data as `request_vector`.
 
 ## Success Criteria
 
@@ -77,7 +77,7 @@ The key tasks are as follows:
     - Select **Use existing** under **Database id** and select the **ContosoSuites** database from the dropdown list.
     - Enter "MaintenanceRequests" into the **Container id** box.
     - Enter "/hotel_id" into the **Partition key** box.
-    - Expand the **Container Vectory Policy** section of the dialog and select **Add vector embedding**.
+    - Expand the **Container Vectory Policy** section of the dialog, select **Add vector embedding**, and then enter the following values into the specified fields:
       - Path: Enter **"/request_vector"**.
       - Data type: Select **float32**.
       - Distance function: Select **cosine**.
