--- a/docs/04_implement_audio_transcription/0403.md
+++ b/docs/04_implement_audio_transcription/0403.md
@@ -8,6 +8,7 @@ parent: 'Exercise 04: Implement audio transcription'
 # Task 03 - Implement vector search of audio transcriptions and summaries (30 minutes)
 
 TODO
+(include saving to Cosmos DB and then using the search page)
 
 ## Introduction
 
