Adding more VS code extensions

--- a/docs/01_deploy_app_resources/0101.md
+++ b/docs/01_deploy_app_resources/0101.md
@@ -18,11 +18,17 @@ In this task, you will ensure that you have a particular set of tools installed 
 The key tasks are as follows:
 
 1. Ensure that you have the following software installed:
-   1. [Visual Studio Code](https://code.visualstudio.com/) and the [C# Dev Kit](https://marketplace.visualstudio.com/items?itemName=ms-dotnettools.csdevkit) and [Bicep](https://marketplace.visualstudio.com/items?itemName=ms-azuretools.vscode-bicep) extensions for Visual Studio Code. Alternatively, if you have Visual Studio installed, you can use that.
-   2. The [Microsoft .NET 8.0 SDK](https://dotnet.microsoft.com/download/dotnet/8.0). Ensure that you have the latest version of the SDK, not the Runtime.
-   3. The [Azure Command Line Interface](https://learn.microsoft.com/cli/azure/install-azure-cli).
-   4. [A Git client](https://git-scm.com/download/). An alternative option is to install [GitHub Desktop](https://desktop.github.com/).
-   5. [Python 3.10 or later](https://www.python.org/downloads/). You can run all of the exercises in this lab using a standard installation of Python and do not need the Anaconda Distribution of Python. If you do have Anaconda, make sure that you can execute Python and pip commands from the command line.
+   1. [Visual Studio Code](https://code.visualstudio.com/) (Alternatively, if you have Visual Studio installed, you can use that.)
+   2. Install the following extensions in Visual Studio Code:
+      - [C# Dev Kit](https://marketplace.visualstudio.com/items?itemName=ms-dotnettools.csdevkit)
+      - [Bicep](https://marketplace.visualstudio.com/items?itemName=ms-azuretools.vscode-bicep)
+      - [Azure Functions extension](https://marketplace.visualstudio.com/items?itemName=ms-azuretools.vscode-azurefunctions)
+      - [Azure Storage extension](https://marketplace.visualstudio.com/items?itemName=ms-azuretools.vscode-azurestorage)
+   3. Install the [Azure Functions Core Tools](https://learn.microsoft.com/azure/azure-functions/functions-run-local), which enables an integrated local debugging experience.
+   4. The [Microsoft .NET 8.0 SDK](https://dotnet.microsoft.com/download/dotnet/8.0). Ensure that you have the latest version of the SDK, not the Runtime.
+   5. The [Azure Command Line Interface](https://learn.microsoft.com/cli/azure/install-azure-cli).
+   6. [A Git client](https://git-scm.com/download/). An alternative option is to install [GitHub Desktop](https://desktop.github.com/).
+   7. [Python 3.10 or later](https://www.python.org/downloads/). You can run all of the exercises in this lab using a standard installation of Python and do not need the Anaconda Distribution of Python. If you do have Anaconda, make sure that you can execute Python and pip commands from the command line.
 
       {: .note }
       > Regardless of which distribution you use, make sure that you can run `python` and `pip` from your command line. If you are not sure whether you have pip installed, run `python -m ensurepip` to check.
