Adding comment to E02T01

--- a/docs/02_implement_vector_search_in_cosmos_db_nosql/0201.md
+++ b/docs/02_implement_vector_search_in_cosmos_db_nosql/0201.md
@@ -53,7 +53,7 @@ The key tasks are as follows:
 
         ![The Enable button is highlighted on the Vector Search for NoSQL API enrollment dialog.](../../media/Solution/0201-azure-cosmosdb-features-vector-search-enable.png)
 
-    4. Wait for the notification that the feature was successfully enabled.
+    4. Wait for the notification that the feature was successfully enabled. You should see the **Status** of the **Vector Search for NoSQL API** change to **On**.
 
   - To enable Vector Search via the Azure CLI:
     1. From the toolbar in the [Azure portal](https://portal.azure.com), open the Azure Cloud Shell.
