--- a/docs/02_implement_vector_search_in_cosmos_db_nosql/0203.md
+++ b/docs/02_implement_vector_search_in_cosmos_db_nosql/0203.md
@@ -9,14 +9,20 @@ parent: 'Exercise 02: Add chat with your data'
 
 ## Introduction
 
+
+
 The Azure AI Studio Chat playground is a good place to try out functionality such as adding your own data and chatting with an assistant, but it is not the only way to enable this communication. It is also possible to integrate Azure OpenAI resources into existing code bases in a variety of languages, including C#, F#, Java, JavaScript, Python, and any language supporting interactions with REST APIs.
 
 ## Description
 
 Execute vector distance queries (15 min)
-   1. Execute various vector searches
-   2. Compare against traditional search?
-   3. Add new record and then search for it? This will showcase vectorization process running against new records and making them immediately available for searching.
+   1. Update application to handle vectorizing new records (use API endpoints for inserting new maintenance tasks.) - Have API endpoint for including user reviews 
+   2. Execute various vector searches via the application
+   3. Add new record and then search for it
+
+
+
+To add vectors to your Azure Cosmos DB for NoSQL database's collections, you first need to generate embeddings using the `text-embedding-ada-002` model provided by Azure OpenAI. As part of the Bicep script you executed in Exercise 1, a deployment named `text-embedding-ada-002` was created using this model.
 
 Now that you have demonstrated some of the capabilities around Azure OpenAI and using custom data to inform responses, the Contoso Suites development team would like to incorporate an Azure OpenAI ChatGPT model in their website. To simplify matters, they would like you to demonstrate in a Streamlit dashboard how we can incorporate chat capabilities. They are not particularly concerned about user interface niceties, as that is something they are capable of doing. Instead, they want you to demonstrate the integration process.
 
@@ -50,9 +56,12 @@ The key tasks are as follows:
 
 ## Learning Resources
 
-- [Quickstart: Chat with Azure OpenAI models using your own data](https://learn.microsoft.com/azure/ai-services/openai/use-your-data-quickstart?tabs=powershell%2Cpython&pivots=programming-language-python)
-- [Sample Chat App with AOAI](https://github.com/microsoft/sample-app-aoai-chatGPT/tree/main)
-- [Sample 08 - Use your own data](https://github.com/Azure/azure-sdk-for-net/blob/main/sdk/openai/Azure.AI.OpenAI/tests/Samples/Sample08_UseYourOwnData.cs)
+- [What are vector embeddings](https://learn.microsoft.com/azure/cosmos-db/gen-ai/vector-embeddings)
+- [Understand embeddings in Azure OpenAI Service](https://learn.microsoft.com/azure/ai-services/openai/concepts/understand-embeddings)
+- [Generate vector embeddings with Azure OpenAI](https://learn.microsoft.com/azure/ai-services/openai/how-to/embeddings)
+- [Azure Cosmos DB as a vector database](https://learn.microsoft.com/azure/cosmos-db/vector-database)
+
+
 - [Build a conversational app with Streamlit](https://docs.streamlit.io/knowledge-base/tutorials/build-conversational-apps)
 
 ## Solution
